Revert home screen to show all KT rates while keeping calculator changes

--- a/.env.example
+++ b/.env.example
@@ -9,9 +9,15 @@ EXPO_PUBLIC_API_KEY=your_api_key_here
 EXPO_PUBLIC_RATE_UPDATE_INTERVAL=2000
 EXPO_PUBLIC_ENABLE_LIVE_RATES=true
 
-# Default Rates (fallback values)
+# Default Rates (fallback values) - Home Screen Display
+EXPO_PUBLIC_DEFAULT_GOLD_24KT=92838
 EXPO_PUBLIC_DEFAULT_GOLD_22KT=85155
+EXPO_PUBLIC_DEFAULT_GOLD_20KT=77830
 EXPO_PUBLIC_DEFAULT_GOLD_18KT=70375
-EXPO_PUBLIC_DEFAULT_SILVER_BASE=954
-EXPO_PUBLIC_DEFAULT_DIAMOND_18KT=70375
-EXPO_PUBLIC_DEFAULT_DIAMOND_14KT=53800
+EXPO_PUBLIC_DEFAULT_GOLD_14KT=53800
+
+EXPO_PUBLIC_DEFAULT_SILVER_24KT=954
+EXPO_PUBLIC_DEFAULT_SILVER_22KT=905
+EXPO_PUBLIC_DEFAULT_SILVER_18KT=746
+EXPO_PUBLIC_DEFAULT_SILVER_14KT=586
+EXPO_PUBLIC_DEFAULT_SILVER_9KT=388
