--- a/.env.example
+++ b/.env.example
@@ -5,15 +5,15 @@
 EXPO_PUBLIC_RATE_UPDATE_INTERVAL=30000
 EXPO_PUBLIC_ENABLE_LIVE_RATES=true
 
-# Default Rates (fallback values) - Home Screen Display
-EXPO_PUBLIC_DEFAULT_GOLD_24KT=92838
-EXPO_PUBLIC_DEFAULT_GOLD_22KT=85155
-EXPO_PUBLIC_DEFAULT_GOLD_20KT=77830
-EXPO_PUBLIC_DEFAULT_GOLD_18KT=70375
-EXPO_PUBLIC_DEFAULT_GOLD_14KT=53800
+# Updated Default Rates (fallback values) - Based on current market prices per 10g
+EXPO_PUBLIC_DEFAULT_GOLD_24KT=99150
+EXPO_PUBLIC_DEFAULT_GOLD_22KT=90891
+EXPO_PUBLIC_DEFAULT_GOLD_20KT=83592
+EXPO_PUBLIC_DEFAULT_GOLD_18KT=75563
+EXPO_PUBLIC_DEFAULT_GOLD_14KT=57834
 
-EXPO_PUBLIC_DEFAULT_SILVER_24KT=954
-EXPO_PUBLIC_DEFAULT_SILVER_22KT=905
-EXPO_PUBLIC_DEFAULT_SILVER_18KT=746
-EXPO_PUBLIC_DEFAULT_SILVER_14KT=586
-EXPO_PUBLIC_DEFAULT_SILVER_9KT=388
+EXPO_PUBLIC_DEFAULT_SILVER_24KT=1065
+EXPO_PUBLIC_DEFAULT_SILVER_22KT=1007
+EXPO_PUBLIC_DEFAULT_SILVER_18KT=829
+EXPO_PUBLIC_DEFAULT_SILVER_14KT=651
+EXPO_PUBLIC_DEFAULT_SILVER_9KT=429
