--- a/server/package.json
+++ b/server/package.json
@@ -1,32 +1,17 @@
 {
-  "name": "jewar-house-rates-api",
+  "name": "server",
   "version": "1.0.0",
-  "description": "Live gold and silver rates API for Jewar House",
+  "description": "",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "jest"
+    "dev": "nodemon server.js"
   },
-  "keywords": ["gold", "silver", "rates", "api", "metals"],
-  "author": "Jewar House",
-  "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "axios": "^1.6.0",
-    "node-cache": "^5.1.2",
-    "helmet": "^7.1.0",
-    "compression": "^1.7.4",
-    "express-rate-limit": "^7.1.5"
+    "cors": "^2.8.5"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
-    "jest": "^29.7.0",
-    "supertest": "^6.3.3"
-  },
-  "engines": {
-    "node": ">=18.0.0"
+    "nodemon": "^3.0.1"
   }
 }
