--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "server",
+  "name": "jewar-house-server",
   "version": "1.0.0",
-  "description": "",
+  "description": "Backend server for Jewar House application",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -9,9 +9,12 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "cors": "^2.8.5"
-  },
-  "devDependencies": {
+    "cors": "^2.8.5",
+    "axios": "^1.6.0",
+    "node-cache": "^5.1.2",
     "nodemon": "^3.0.1"
-  }
+  },
+  "keywords": ["api", "rates", "gold", "silver"],
+  "author": "Jewar House",
+  "license": "PRIVATE"
 }
