--- a/client/package.json
+++ b/client/package.json
@@ -14,11 +14,11 @@
     "lint": "expo lint"
   },
   "dependencies": {
+    "@expo-google-fonts/crimson-pro": "^0.2.3",
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo-google-fonts/poppins": "^0.2.3",
-    "@expo-google-fonts/crimson-pro": "^0.2.3",
     "date-fns": "^3.3.1",
-    "expo": "~53.0.0",
+    "expo": "^53.0.13",
     "expo-constants": "~16.0.0",
     "expo-font": "~12.0.0",
     "expo-haptics": "~13.0.0",
@@ -29,6 +29,7 @@
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~3.0.0",
     "lucide-react-native": "^0.359.0",
+    "npx": "^10.2.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.3",
