Integrate External APIs for Live Rates

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,32 +1,47 @@
-# API Configuration
+# Server Configuration
 PORT=3001
 NODE_ENV=development
 
-# Third-party API Keys (Choose one or multiple for redundancy)
-METALS_API_KEY=your_metals_api_key_here
-GOLD_API_KEY=your_gold_api_key_here
-FIXER_API_KEY=your_fixer_api_key_here
+# Third-party API Keys for Live Rates
+# Get these from the respective providers:
 
-# API URLs
+# Metals API (https://metals-api.com/) - Recommended for precious metals
+METALS_API_KEY=your_metals_api_key_here
 METALS_API_URL=https://api.metals.live/v1/spot
+
+# Gold API (https://www.goldapi.io/) - Alternative for gold/silver rates
+GOLD_API_KEY=your_gold_api_key_here
 GOLD_API_URL=https://www.goldapi.io/api
+
+# Fixer API (https://fixer.io/) - For USD to INR exchange rates
+FIXER_API_KEY=your_fixer_api_key_here
 FIXER_API_URL=https://api.fixer.io/v1
 
 # Cache Configuration
-CACHE_TTL=300
-UPDATE_INTERVAL=30000
+CACHE_TTL=300                # Cache duration in seconds (5 minutes)
+UPDATE_INTERVAL=30000        # Rate update interval in milliseconds (30 seconds)
 
 # Rate Limiting
-RATE_LIMIT_WINDOW=900000
-RATE_LIMIT_MAX=100
+RATE_LIMIT_WINDOW=900000     # Rate limit window in milliseconds (15 minutes)
+RATE_LIMIT_MAX=100           # Maximum requests per window
 
 # CORS Configuration
 ALLOWED_ORIGINS=http://localhost:8081,http://localhost:3000,https://your-frontend-domain.com
 
-# Redis Configuration (Optional - for production)
+# Redis Configuration (Optional - for production scaling)
 REDIS_URL=redis://localhost:6379
 REDIS_PASSWORD=
 USE_REDIS=false
 
 # Security
 API_SECRET_KEY=your_secret_key_for_internal_auth
+
+# API Priority Configuration
+# Set to 'true' to enable each API source
+ENABLE_METALS_API=true
+ENABLE_GOLD_API=true
+ENABLE_FIXER_API=true
+
+# Fallback Configuration
+ENABLE_SIMULATION_FALLBACK=true
+SIMULATION_VOLATILITY=0.004  # Maximum fluctuation percentage for simulation
